# cognitive_core

./: .gitignore  Cargo.toml  LICENSE  README.md  start_cerebro.bat
.cargo/: config.toml
src/: main.rs  messages.rs  ollama_resolver.rs
src/actors/: cognition.rs  heartbeat.rs  memory.rs  mod.rs  perception.rs
