[package]
name = "cognitive_core"
version = "0.1.0"
edition = "2021"
description = "Cognitive Core - Life Daemon"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastembed = "5.17.2"
bytemuck = "1.25.1"
llama-cpp-2 = { version = "0.1.151", features = ["vulkan"] }
